@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.userprofileapi.controller.response;
 
-import static java.util.stream.Collectors.toList;
-
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.List;
 
@@ -19,6 +17,6 @@ public class UserProfileDataResponse {
     public UserProfileDataResponse(List<UserProfile> userProfile, boolean rolesRequired) {
         this.userProfiles = userProfile.stream()
                 .map(professionalUser -> new UserProfileWithRolesResponse(professionalUser, rolesRequired))
-                .collect(toList());
+                .toList();
     }
 }
